--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,22 +388,38 @@ jobs:
       - destroy-environment:
           Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
-          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"         
-#   cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+          Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"  
 
+  cloudfront-update:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs      
+      - run:
+          name: Save old workflow id on kvdb.io
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            echo "OldWorkflowID: ${OldWorkflowID}"
+            curl https://kvdb.io/${KVDB_BUCKET}/old_workflowid -d "${OldWorkflowID}"
+
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
+      - destroy-environment:
+          WorkFlow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          WorkFlow_ID: "${CIRCLE_WORKFLOW_ID:0:7}" 
+#             # your code here
+#           name:
 # cleanup:
 #     docker:
 #       # Docker image here
