--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,14 +436,14 @@ jobs:
             echo Stack names: "${STACKS[@]}"
 
             export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflowid)
-            echo Old Workflow ID: $OldWorkflowID  
+            echo Old Workflow ID: ${OldWorkflowID  }
             
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
             then
               echo "-------------Cleaning up old resources-------------"
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive || true
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}" || true
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}" || true
             else
               echo "-------------Nothing to Cleanup-------------"
             fi
@@ -481,4 +481,3 @@ workflows:
           requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
-          
