--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -414,6 +414,8 @@ jobs:
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --tags project=udapeople
+
          # --tags project=udapeople
 
       - destroy-environment:
@@ -436,7 +438,7 @@ jobs:
             echo Stack names: "${STACKS[@]}"
 
             export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflowid)
-            echo Old Workflow ID: ${OldWorkflowID  }
+            echo Old Workflow ID: ${OldWorkflowID}
             
             if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
             then
