--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,6 +406,7 @@ jobs:
               --no-paginate --output text)
             echo "OldWorkflowID: ${OldWorkflowID}"
             curl https://kvdb.io/${KVDB_BUCKET}/old_workflowid -d "${OldWorkflowID}"
+            echo "CurrentID: ${CIRCLE_WORKFLOW_ID:0:7}"
 
       - run:
           name: Update cloudfront distribution
@@ -415,8 +416,7 @@ jobs:
             --stack-name InitialStack \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
-            echo OldID: "${OldWorkflowID}"
-            echo CurrentID "${CIRCLE_WORKFLOW_ID:0:7}"
+            
          # --tags project=udapeople
 
       - destroy-environment:
