--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -404,8 +404,7 @@ jobs:
             export OldWorkflowID=$(aws cloudformation \
               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
               --no-paginate --output text)
-            echo ${OldWorkflowID} >> ~/OldWorkflowID.txt
-            cat OldWorkflowID.txt
+            echo "OldWorkflowID: ${OldWorkflowID}"
             curl https://kvdb.io/${KVDB_BUCKET}/old_workflowid -d "${OldWorkflowID}"
             echo "CurrentID: ${CIRCLE_WORKFLOW_ID:0:7}"
 
