--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -14,14 +14,10 @@
   become: true
   shell: |
     curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+    sudo apt -y install nodejs
 
-  
-- name: "Installing nodejs 13"
-  become: true
-  apt:
-    name: ["nodejs"]
-    state: latest
-    update_cache: yes
+    sudo npm install --global n
+    sudo n 13.8.0
 
  
 - name: "Installing pm2"
