--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ commands:
           command: |
             curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
             sudo apt -y install nodejs
+
+            sudo npm install --global n
+            sudo n 13.8.0
   install_awscli:
     description: Install aws cli v2
     steps:
