--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -42,3 +42,8 @@ Resources:
           Value: !Sub backend-${ID}
         - Key: project
           Value: udapeople
+  InstanceEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpv
+      InstanceId: !Ref EC2Instance 
