--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -25,6 +25,10 @@ Resources:
           ToPort: 9100
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 9090
+          ToPort: 9090
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
