--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -369,7 +369,7 @@ jobs:
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL=http://${BACKEND_IP}:3030
-            if curl -s $API_URL/api/status | grep "ok"
+            if curl -s http://${BACKEND_IP}:3030/api/status | grep "ok"
             then
               exit 0
             else
