--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,6 +144,7 @@ jobs:
              cd frontend
              npm install
              npm audit fix --force --audit-level=critical
+             npm audit --audit-level=critical
   scan-backend:
     docker:
       - image: cimg/node:13.8.0
@@ -157,6 +158,9 @@ jobs:
              cd backend
              npm install
              npm audit fix --force --audit-level=critical
+              
+
+            
 
   deploy-infrastructure:
     docker:
@@ -185,7 +189,7 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
+            BACKEND_IP=$(aws ec2 describe-instances \
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo  $BACKEND_IP >> .circleci/ansible/inventory.txt
@@ -294,11 +298,9 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
+            BACKEND_IP=$(aws ec2 describe-instances \
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
             echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
       - run:
@@ -369,7 +371,7 @@ jobs:
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL=http://${BACKEND_IP}:3030
-            if curl -s http://${BACKEND_IP}:3030/api/status | grep "ok"
+            if curl -s $API_URL/api/status | grep "ok"
             then
               exit 0
             else
