--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -9,7 +9,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub udapeople-${ID}
+      GroupName: !Sub UdaPeople-${ID}
       GroupDescription: Allow port 22 and port 3030 and port 9100.
       SecurityGroupIngress:
         - IpProtocol: tcp
