--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "4.7.2",
     "@types/jest": "^24.0.15",
-    "@types/node": "*",
+    "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
@@ -34,7 +34,6 @@
     "@types/redux-actions": "2.6.1",
     "@types/webpack": "4.4.34",
     "@types/webpack-env": "1.13.9",
-    "@webpack-cli/serve": "^1.7.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
@@ -84,7 +83,7 @@
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "jest": "^24.8.0",
-      "moment": "^2.24.0",
+    "moment": "^2.24.0",
     "oauth-sign": "^0.9.0",
     "raf": "^3.4.1",
     "react": "^16.8.6",
