--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,7 +287,7 @@ jobs:
             BACKEND_IP=$(aws ec2 describe-instances \
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            echo API_URL="http://${BACKEND_IP}:3030" > frontend/.env
             cat frontend/.env
       - run:
           name: Deploy frontend objects
@@ -341,6 +341,7 @@ jobs:
           Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
           Workflow_ID: "${CIRCLE_WORKFLOW_ID:0:7}"        
+
 
   smoke-test:
     docker:
